[package]
name = "astrobox-plugin-miwear-interconn-fetch"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.47.0", features = ["async", "async-spawn"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
waki = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Pure-rust deflate (via miniz_oxide) so the wasm bundle stays self-contained.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Lightweight, MCU-friendly LZ4 — better decode latency than deflate at the cost
# of a worse ratio. Lets the peer pick its CPU-vs-bandwidth tradeoff.
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
